# _UsefulHelperSCRIPTS

./: .gitignore  NEURAL-CARTRIDGE-SYSTEM.txt  _HelperScriptExeMAKER.py  _MicroserviceLIBRARY.7z  _MicroserviceLIBRARY_Unified_Dec_23_2025.7z  _TheDISMANTLER.7z  helloWORLD.py  kml_schema_dump.json  legacy_mileage_calculator.py
__WIP__/_BDVec/bpe_svd/: pyproject.toml
__WIP__/_mdgRAG/: .gitignore  README.md  diag.bat  pyproject.toml  requirements.txt  run.bat  setup_env.bat  test.bat
__WIP__/_mdgRAG/Project_Info/: project_meta.json
__WIP__/_mdgRAG/_DB_BIN/: texttoucher.db-shm  texttoucher.db-wal
__WIP__/_mdgRAG/_showcase/: .gitignore  README.md  run_cli.sh  run_ui.sh
__WIP__/_mdgRAG/_showcase/embedder_demo/: __init__.py  __main__.py  ui.py
__WIP__/_mdgRAG/docs/: ARCHITECTURE.md  BPE_SVD_WHITEPAPER.md  DEVLOG.md  EXTRACTION_RULES.md  MATH_PROBLEMS_RELATING_TO_EMBEDDING.md  NEXT_LEVEL_MATH_UPGRADES_NORTH_STAR.md  OPPORTUNITIES.md  SYSTEM_MAP.md  TODO.md  TRANSLATION_THEORY.md  UI_WIRING.md  WATCHLIST.md
__WIP__/_mdgRAG/src/: __init__.py  app.py
__WIP__/_mdgRAG/src/adapters/: __init__.py  legacy_source_notes.md
__WIP__/_mdgRAG/src/core/: __init__.py
__WIP__/_mdgRAG/src/ui/: __init__.py  server.py
__WIP__/_mdgRAG/tests/: __init__.py  test_imports.py  test_phase10_hardening.py  test_phase11_query_embedding.py  test_phase12_deterministic_embed.py  test_phase13_ingestion.py  test_phase14_cli.py  test_phase15_ui.py  test_phase2_types.py  test_phase3_storage.py  test_phase4_projection_fusion.py  test_phase5_scoring.py  test_phase6_extraction.py  test_phase7_hydration.py  test_phase8_model_bridge.py  test_phase9_pipeline.py  test_scaffold_smoke.py
__WIP__/_mdgRAG/tools/: diagnostic_ui.py
(+1195 files in other folders)
