[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-manifold"
version = "0.1.0"
description = "Deterministic graph-native manifold system for structured knowledge retrieval"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
