[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe-svd"
version = "0.1.0"
description = "Deterministic BPE-SVD text embeddings — no GPU, no API, fully reproducible."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["nlp", "embeddings", "bpe", "svd", "deterministic", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
training = [
    "scipy>=1.11.0",
]
all = [
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
